# pynfcdev

./: README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  python-lint.yml
examples/: discover_tags.py  discover_tags_statem.py  st25tb_read_user_data.py  st25tb_read_user_data_statem.py  st25tb_write_user_data_statem.py  t2t_read_ndef.py  t2t_write_ndef.py
nfcdev/: __init__.py  nfcdev.py  st25tb.py  statem.py  t2t.py
