[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pynfcdev"
version = "0.7.4"
description = "Python package to use /dev/nfc* interface"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["nfc", "rfid"]
authors = [
  {email = "pguyot@kallisys.net"},
  {name = "Paul Guyot"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
]

dependencies = [
  "ioctl_opt",
  "ndef"
]

[project.urls]
homepage = "https://github.com/pguyot/pynfcdev"
repository = "https://github.com"

[tool.flit.module]
name = "nfcdev"
